# fastapi_app_test_task_for_dimatech

./: .env.example  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/: app.py
src/api/: dependecies.py  dependencies.py  main_router.py  schemas.py
src/api/handlers/account/: router.py  schemas.py
src/api/handlers/authentication/: router.py  schemas.py
src/api/handlers/transaction/: router.py  schemas.py
src/api/handlers/user/: router.py  schemas.py  shcemas.py
src/api/v1/: router.py
src/core/: __init__.py  settings.py
src/database/: __init__.py  _types.py  engine.py
src/database/models/: __init__.py  account.py  base.py  transaction.py  user.py
src/infrastructure/database/: dependencies.py  engine.py
src/infrastructure/database/models/: __init__.py  account.py  token.py  transaction.py  user.py
src/infrastructure/di/: container.py
src/infrastructure/di/modules/: __init__.py  account.py  authentication.py  transaction.py  user.py
src/migrations/: env.py
src/migrations/versions/: 2025_03_23_1606-3e9d184cfa73_.py  2025_03_23_1631-f01bce2405c4_.py  2025_03_23_1726-ccd44019fb6c_.py  2025_03_25_1736-e941ff69b3a2_.py  2025_03_26_1828-85fa876daac1_.py  2025_03_27_1216-94397c6312de_test_users_create.py
src/repositories/: account.py  base.py  token.py  transaction.py  user.py
src/services/: base.py  dto.py
src/services/authentication/: dto.py  service.py
src/services/modules/account/: dto.py  service.py
src/services/user/: dto.py  exceptions.py  service.py
(+7 files in other folders)
