[project]
name = "dimatech_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Rol",email = "rolaleksandr75@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.11,<0.116.0"
alembic = ">=1.15.1,<2.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
uvicorn = ">=0.34.0,<0.35.0"
sqlalchemy = { version = ">=2.0.39,<3.0.0", extras = ["asyncio"] }


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
black = "^25.1.0"
pytest = "^8.3.5"
isort = "^6.0.1"
mypy = "^1.15.0"
pyclean = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
